[project]
name = "qzct-login"
version = "1.1.0"
description = "校园网自动登录 + 定时关机工具"
readme = "README.md"
license = {text = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "QZCT Developer"}
]
keywords = ["校园网", "自动登录", "定时关机", "PyQt5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: Free For Educational Use",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

dependencies = [
    "PyQt5>=5.15.0,<6.0.0",
    "requests>=2.25.0,<3.0.0",
    "cryptography>=3.0.0,<44.0.0",
    "lunar-python>=1.0.0,<2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "loguru>=0.7.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.2.0",
    "types-requests>=2.28.0",
]

[project.scripts]
qzct = "main:main"

[project.urls]
Homepage = "https://github.com/taboo-hacker/qzct-login"
Repository = "https://github.com/taboo-hacker/qzct-login"
Issues = "https://github.com/taboo-hacker/qzct-login/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gui", "gui.dialogs", "gui.widgets", "utils"]

[tool.setuptools.package-data]
"*" = ["*.py"]

# ============================================
# Black 代码格式化配置
# ============================================
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | tests
)/
'''

# ============================================
# isort 导入排序配置
# ============================================
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["gui", "utils"]
known_third_party = ["PyQt5", "requests", "cryptography", "lunar_python", "loguru"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_gitignore = true

# ============================================
# Ruff 代码检查配置
# ============================================
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "SIM108", # use ternary operator
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG", "S101"]

# ============================================
# MyPy 类型检查配置
# ============================================
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "PyQt5.*",
    "lunar_python.*",
    "cryptography.*",
]
ignore_missing_imports = true

# ============================================
# Pytest 测试配置
# ============================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gui: marks tests that require GUI",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================
# Coverage 覆盖率配置
# ============================================
[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
